# simple-api

./: .dockerignore  Dockerfile  README.md  compose.yaml  makefile  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
app/: main.py
app/core/: config.py
deployment/: fastapi-configmap.yml  fastapi-deployment.yml  fastapi-np.yml
