[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Benjamin Catouillard <catouillard.benjamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
passlib = "^1.7.4"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
